--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
           "infrastructure/*": ["./src/infrastructure/*"],
           "components/*": ["./src/ui/components/*"],
           "hooks/*": ["./src/ui/hooks/*"],
+          "contexts/*": ["./src/ui/contexts/*"],
           "styles/*": ["./src/ui/styles/*"],
           "assets/*": ["./public/*"]
       },
